<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_server">

        <SwitchPreferenceCompat
            app:key="pref_auto_start_server"
            app:title="@string/pref_auto_start_server_title"
            app:summary="@string/pref_auto_start_server_summary"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="pref_api_port"
            app:title="@string/pref_api_port_title"
            app:summary="@string/pref_api_port_summary"
            app:defaultValue="8080"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="pref_custom_api_token"
            app:title="@string/pref_custom_token_title"
            app:summary="@string/pref_custom_token_summary"
            app:persistent="false"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_execution">

        <EditTextPreference
            app:key="pref_default_task_timeout_seconds"
            app:title="@string/pref_default_timeout_title"
            app:summary="@string/pref_default_timeout_summary"
            app:defaultValue="300"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="pref_cleanup_age_days"
            app:title="@string/pref_cleanup_days_title"
            app:summary="@string/pref_cleanup_days_summary"
            app:defaultValue="7"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_ui">

        <SwitchPreferenceCompat
            app:key="pref_show_full_token"
            app:title="@string/pref_show_full_token_title"
            app:summary="@string/pref_show_full_token_summary"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
